# benchmark

./: .gitattributes  .gitignore  README.md  SIGIL.csv  SIGIL.txt  run_benchmark.ps1
.github/: copilot-instructions.md
cpp_benchmark/: CMakeLists.txt  pixi.toml
cpp_benchmark/src/: main.cpp  module_01.cpp  module_01.h  module_02.cpp  module_02.h  module_03.cpp  module_03.h  module_04.cpp  module_04.h  module_05.cpp  module_05.h  module_06.cpp  module_06.h  module_07.cpp  module_07.h  module_08.cpp  module_08.h  module_09.cpp  module_09.h  module_10.cpp  module_10.h  module_11.cpp  module_11.h  module_12.cpp  module_12.h  module_13.cpp  module_13.h  module_14.cpp  module_14.h  module_15.cpp  module_15.h  module_16.cpp  module_16.h  module_17.cpp  module_17.h  module_18.cpp  module_18.h  module_19.cpp  module_19.h  module_20.cpp  (+21 more)
node_benchmark/: index.html  package-lock.json  package.json  pixi.toml
node_benchmark/src/: App.tsx  store.ts
node_benchmark/src/components/: ContactForm.tsx  Dashboard.tsx  Header.tsx
node_benchmark/src/lib/: api.ts  utils.ts
plot_results/: pixi.toml  plot.py
python_benchmark/: benchmark_imports.py  pixi.toml
